--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Toronto Ruby Software Developer and Cloud Infrastruture specialist">
+  <meta name="description" content="Toronto Software Developer and Cloud Infrastruture Specialist">
   <title>Rafael Moraes</title>
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,600,700,800|Cardo:400|Lato:100" rel="stylesheet" type="text/css">
   <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,21 +21,13 @@
   </header>
   <main class="container">
     <section class="row hello" lang="en">
-      <p>Hello, I am a Software Developer professional based in Toronto
-        currently working at <a href="https://www.itsme3d.com" target="_blank">ITSME</a>,
-        developing software and infrastructure for
-        <a href="https://share.itsme3d.com/6F_8eQWGf1ZNZrm5h0lM_w/robot_hip_hop_dance_276_276.gif" target="_blank">3D avatars</a>
-        and virtual reality applications.</p>
+      <p>Hello, I am a software developer and cloud infrastructure specialist based in Toronto. My current role is DevOps Engineer at <a href="https://www.nulogy.com" target="_blank">Nulogy</a>,
+        developing infrastructure as code for security and reliability purposes.</p>
       <p>I have been coding in Ruby, JavaScript and PHP
-        for most of my career,
-        also having some background with C, Python and Java. Lately, I have been amused by the
-        <a href="https://github.com/rafops/vlsm-go" target="_blank">Go</a> language.</p>
+        for most of my career, but in the past three years, I've been focusing more on cloud infrastructure.</p>
       <p>My work experience includes working for hosting, telecommunication and
         broadcasting companies, but also as a researcher on
         <a href="http://cw.gl/kw" target="_blank">3D scientific visualisation</a> for Web.
-      <p>Additionally, I am educating myself on more effective ways to deploy
-        and scale applications in the cloud, by taking advantage of Docker
-        containers and programmable infrastructure.</p>
       <p>You can find  more about me on
         <a href="https://linkedin.com/in/rafops" target="_blank">LinkedIn</a> and
         <a href="https://github.com/rafops" target="_blank">GitHub</a>.</p>
