--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
   <main class="container">
     <section class="row hello" lang="en">
-      <p>Hello, I am a software developer and cloud infrastructure specialist based in Toronto. My current role is DevOps Engineer at <a href="https://www.nulogy.com" target="_blank">Nulogy</a>,
+      <p>Hello, I am a software developer and cloud infrastructure specialist based in Toronto. My current role is DevOps Engineer at <a href="https://nulogy.com" target="_blank">Nulogy</a>,
         developing infrastructure as code for security and reliability purposes.</p>
       <p>I have been coding in Ruby, JavaScript and PHP
         for most of my career, but in the past three years, I've been focusing more on cloud infrastructure.</p>
