--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         for most of my career, but in the past three years, I've been focusing more on cloud infrastructure.</p>
       <p>My work experience includes working for hosting, telecommunication and
         broadcasting companies, but also as a researcher on
-        <a href="http://cw.gl/kw" target="_blank">3D scientific visualisation</a> for Web.
+        <a href="http://gvcm.ipen.br/crystalwalk" target="_blank">3D scientific visualisation</a> for Web.
       <p>You can find  more about me on
         <a href="https://linkedin.com/in/rafops" target="_blank">LinkedIn</a> and
         <a href="https://github.com/rafops" target="_blank">GitHub</a>.</p>
