--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
   </header>
   <main class="container">
     <section class="row hello" lang="en">
-      <p>Hello, I am a software developer and cloud infrastructure specialist based in Toronto. My current role is DevOps Engineer at <a href="https://nulogy.com" target="_blank">Nulogy</a>,
-        developing infrastructure as code for security and reliability purposes.</p>
-      <p>I have been coding in Ruby, JavaScript and PHP
-        for most of my career, but in the past three years, I've been focusing more on cloud infrastructure.</p>
+      <p>Hello, I am a software developer and cloud infrastructure specialist based in Toronto. I currently work at <a href="https://nulogy.com" target="_blank">Nulogy</a>,
+        developing infrastructure as code, handling incidents, and performing operation maintenances.</p>
+      <p>I have a diverse experience programming in Ruby, JavaScript and PHP, but also a decent exposure to infrastructure and operations.</p>
       <p>My work experience includes working for hosting, telecommunication and
         broadcasting companies, but also as a researcher on
         <a href="http://gvcm.ipen.br/crystalwalk" target="_blank">3D scientific visualisation</a> for Web.
