--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <p>Hello, I am a software developer and cloud infrastructure specialist based in Toronto. I currently work at <a href="https://nulogy.com" target="_blank">Nulogy</a>,
         developing infrastructure as code, handling incidents, and performing operation maintenances.</p>
       <p>I have a diverse experience programming in Ruby, JavaScript and PHP, but also a decent exposure to infrastructure and operations.</p>
-      <p>My work experience includes working for hosting, telecommunication and
+      <p>My work experience includes working for hosting, telecommunication, and
         broadcasting companies, but also as a researcher on
-        <a href="http://gvcm.ipen.br/crystalwalk" target="_blank">3D scientific visualisation</a> for Web.
+        <a href="http://gvcm.ipen.br/crystalwalk" target="_blank">3D educational software</a> for materials science students.
       <p>You can find  more about me on
         <a href="https://linkedin.com/in/rafops" target="_blank">LinkedIn</a> and
         <a href="https://github.com/rafops" target="_blank">GitHub</a>.</p>
