--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Toronto Software Developer and Cloud Infrastruture Specialist">
-  <title>Rafael Moraes</title>
+  <meta name="description" content="Canada Software Developer and Cloud Infrastruture Specialist">
+  <title>Rafael de Moraes</title>
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,600,700,800|Cardo:400|Lato:100" rel="stylesheet" type="text/css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="normalize.css">
@@ -16,14 +16,14 @@
 <body>
   <!-- <section id="clouds" class="clouds"></section> -->
   <header class="header">
-    <h1>Rafael Moraes</h1>
-    <h2>Software Developer</h2>
+    <h1>Rafael de Moraes</h1>
+    <h2>SRE/SWE</h2>
   </header>
   <main class="container">
     <section class="row hello" lang="en">
-      <p>Hello, I am a software developer and cloud infrastructure specialist based in Toronto. I currently work at <a href="https://nulogy.com" target="_blank">Nulogy</a>,
+      <p>Hello, I am a SRE/SWE specialized in cloud infrastructure, security and automation. I currently work at <a href="https://nulogy.com" target="_blank">Nulogy</a>,
         developing infrastructure as code, handling incidents, and performing operation maintenances.</p>
-      <p>I have a diverse experience programming in Ruby, JavaScript and PHP, but also a decent exposure to infrastructure and operations.</p>
+      <p>I have a diverse experience programming in Ruby, Python and Node, maintaining cloud infrastructure and operations.</p>
       <p>My work experience includes working for hosting, telecommunication, and
         broadcasting companies, but also as a researcher on
         <a href="http://gvcm.ipen.br/crystalwalk" target="_blank">3D educational software</a> for materials science students.
