--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Canada Software Developer and Cloud Infrastruture Specialist">
+  <meta name="description" content="Site Reliability Engineer and Software Developer based in Canada">
   <title>Rafael de Moraes</title>
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,600,700,800|Cardo:400|Lato:100" rel="stylesheet" type="text/css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -17,17 +17,14 @@
   <!-- <section id="clouds" class="clouds"></section> -->
   <header class="header">
     <h1>Rafael de Moraes</h1>
-    <h2>SRE/SWE</h2>
+    <h2>Site Reliability Engineer</h2>
   </header>
   <main class="container">
     <section class="row hello" lang="en">
-      <p>Hello, I am a SRE/SWE specialized in cloud infrastructure, security and automation. I currently work at <a href="https://nulogy.com" target="_blank">Nulogy</a>,
-        developing infrastructure as code, handling incidents, and performing operation maintenances.</p>
-      <p>I have a diverse experience programming in Ruby, Python and Node, maintaining cloud infrastructure and operations.</p>
-      <p>My work experience includes working for hosting, telecommunication, and
-        broadcasting companies, but also as a researcher on
-        <a href="http://gvcm.ipen.br/crystalwalk" target="_blank">3D educational software</a> for materials science students.
-      <p>You can find  more about me on
+      <p>Hello, I am a Site Reliability Engineer (SRE) currently working at <a href="https://nulogy.com" target="_blank">Nulogy</a>, architecting, deploying, and maintaining resilient and secure systems, working closely with development and operation teams.</p>
+      <p>My experience includes diverse range of industries from data center hosting, telecommunications, broadcasting, and supply chain environments.</p>
+      <p>In addition to industry experience, I also have experience conducting academic research on <a href="http://gvcm.ipen.br/crystalwalk" target="_blank">3D educational software</a> for materials science students.</p>
+      <p>You can reach out and find more about me on
         <a href="https://linkedin.com/in/rafops" target="_blank">LinkedIn</a> and
         <a href="https://github.com/rafops" target="_blank">GitHub</a>.</p>
     </section>
