--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Site Reliability Engineer and Software Developer based in Canada">
-  <title>Rafael de Moraes</title>
+  <meta name="description" content="Rafael Moraes - Site Reliability Engineer and Software Developer">
+  <title>Rafael Moraes</title>
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans:300,400,600,700,800|Cardo:400|Lato:100" rel="stylesheet" type="text/css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="normalize.css">
@@ -16,7 +16,7 @@
 <body>
   <!-- <section id="clouds" class="clouds"></section> -->
   <header class="header">
-    <h1>Rafael de Moraes</h1>
+    <h1>Rafael Moraes</h1>
     <h2>Site Reliability Engineer</h2>
   </header>
   <main class="container">
@@ -24,7 +24,7 @@
       <p>Hello, I am a Site Reliability Engineer (SRE) currently working at <a href="https://nulogy.com" target="_blank">Nulogy</a>, architecting, deploying, and maintaining resilient and secure systems, working closely with development and operation teams.</p>
       <p>My experience includes diverse range of industries from data center hosting, telecommunications, broadcasting, and supply chain environments.</p>
       <p>In addition to industry experience, I also have experience conducting academic research on <a href="http://gvcm.ipen.br/crystalwalk" target="_blank">3D educational software</a> for materials science students.</p>
-      <p>You can reach out and find more about me on
+      <p>You can reach out to me on
         <a href="https://linkedin.com/in/rafops" target="_blank">LinkedIn</a> and
         <a href="https://github.com/rafops" target="_blank">GitHub</a>.</p>
     </section>
